--- a/src/dark-theme.css
+++ b/src/dark-theme.css
@@ -1,28 +1,17 @@
 :root {
-  /* --white: #3a3b3c;
-  --p-color: #fff;
-  --h2-color: #ffff;
-  --title-of-page: #ff5300;
-  --background: #ff5300;
-  --h3-orange: #ff5300;
-  --border: white;
-  --background-comp: #242526;
-  --border-gray: #373737;
-  --svg-color: #ff5300;
-  --border-orange: #ff5300;
-  --h2-gray: #fff;
-  --aqua: #00acff;
-  --footer-background: #373737; */
   --paragraph: #fff;
   --pre-title-of-blog: #fff;
   --title-of-block: #fff;
-  --background-pinterest-component: #242526;
+  --background-colorful-component: #242526;
   --background-second-color: #3a3b3c;
   --background-color-white: #18191a;
   --orange-permanent: #ff5300;
   --white-permanent: #fff;
   --paragraph-permanent: #7b7b7b;
   --black-to-white: #fff;
+  --orange-to-white: #fff;
+  --aqua-permanent: #00acff;
+  --almost-black-permanent: #373737;
 
   --title-header-first: #ff5300;
   --title-header-second: #fff;
@@ -34,4 +23,7 @@
   --our-services-number: #fffbfb;
   --about-us-li: #fff;
   --our-testimonial-blocks: #18191a;
+  --site-blocks-background: #3a3b3c;
+  --site-blocks-svg: #fff;
+  --header-background-white: #3a3b3c;
 }
