--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ p {
   line-height: 24px;
 }
 span {
-  color: var(--h3-orange);
+  color: var(--orange-permanent);
 }
 @media (max-width: 767px) {
   p {
