--- a/src/pages/Main/Components/Form/Form.module.css
+++ b/src/pages/Main/Components/Form/Form.module.css
@@ -29,7 +29,7 @@
   font-weight: 500;
   font-size: 25px;
   line-height: 123.6%;
-  color: var(--h2-style);
+  color: var(--black-to-white);
   text-align: center;
   margin-bottom: 18px;
 
@@ -72,15 +72,16 @@
   width: 100%;
   input {
     all: unset;
-    background: var(--white);
+    background: var(--header-background-white);
     height: 24px;
     padding: 18px;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+    color: var(--paragraph);
     &::placeholder {
       font-weight: 400;
       font-size: 16px;
       line-height: 150.6%;
-      color: var(--p-color);
+      color: var(--paragraph);
     }
   }
 }
@@ -90,16 +91,19 @@
   width: 100%;
   min-height: 163px;
   line-break: anywhere;
-  background: var(--white);
+  background: var(--header-background-white);
   height: 24px;
   display: flex;
   flex-direction: column;
   padding: 18px;
   box-sizing: border-box;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
-
+  color: var(--paragraph);
   @media (min-width: 768px) {
     width: 100%;
+  }
+  &::placeholder {
+    color: var(--paragraph);
   }
 }
 .text-area-container {
