--- a/src/pages/Main/Components/Hero/Hero.module.css
+++ b/src/pages/Main/Components/Hero/Hero.module.css
@@ -28,10 +28,10 @@
     font-size: 31.25px;
     line-height: 123.6%;
     text-align: center;
-    color: var(--h2-color);
+    color: var(--title-of-block);
 
     span {
-      color: var(--h3-orange);
+      color: var(--orange-permanent);
     }
     @media (min-width: 1360px) {
       font-weight: 600;
