--- a/src/pages/Main/Components/OurWork/OurWork.module.css
+++ b/src/pages/Main/Components/OurWork/OurWork.module.css
@@ -4,10 +4,11 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: var(--background-color-white);
 }
 
 .p-style {
-  color: var(--p-color);
+  color: var(--paragraph);
 }
 .h2-style {
   font-weight: 500;
@@ -16,9 +17,7 @@
   text-align: center;
   margin-top: 18px;
   margin-bottom: 25px;
-  span {
-    color: var(--title-of-page);
-  }
+  color: var(--title-of-block);
 }
 
 .nav {
@@ -77,7 +76,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background-color: var(--background);
+  background-color: var(--orange-permanent);
 
   opacity: 0.7;
   display: flex;
@@ -97,14 +96,14 @@
         font-weight: 500;
         font-size: 25px;
         line-height: 123.6%;
-        color: var(--white);
+        color: var(--white-permanent);
       }
       h6 {
         margin-bottom: 47px;
         font-weight: 400;
         font-size: 16px;
         line-height: 150.6%;
-        color: var(--white);
+        color: var(--white-permanent);
       }
     }
   }
