--- a/src/pages/Main/Components/TeamMember/TeamMember.module.css
+++ b/src/pages/Main/Components/TeamMember/TeamMember.module.css
@@ -1,6 +1,7 @@
 .team-member-container {
   padding: 50px 16px;
   text-align: center;
+  background-color: var(--background-color-white);
   .h2-style {
     color: var(--h2-gray);
     font-weight: 500;
@@ -9,14 +10,13 @@
     text-align: center;
     margin-bottom: 18px;
     margin-top: 18px;
-    span {
-      color: var(--h3-orange);
-    }
+    color: var(--title-of-block);
     @media (min-width: 768px) {
       margin-bottom: 60px;
     }
     @media (min-width: 1360px) {
       margin-top: 25px;
+      font-size: 39.06px;
     }
   }
   .prfiles-container ul {
@@ -43,8 +43,12 @@
     width: 270px;
     position: relative;
     height: 350px;
-    background: var(--white);
+    background: var(--our-services-blocks);
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+
+    p {
+      color: var(--paragraph-permanent);
+    }
   }
   .author {
     margin-top: 24px;
@@ -53,6 +57,7 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 123.6%;
+    color: var(--black-to-white);
     @media (min-width: 768px) {
       margin-top: 25px;
       margin-bottom: 12px;
