Сделал темню тему всего сайта, но через ванильный js

--- a/src/components/DatComponent/DatComponent.module.css
+++ b/src/components/DatComponent/DatComponent.module.css
@@ -19,6 +19,7 @@
     font-weight: 400;
     font-size: 12.8px;
     line-height: 123.6%;
+    color: var(--paragraph-permanent);
     @media (min-width: 768px) {
       font-size: 16px;
       line-height: 150.6%;
