--- a/src/components/BlogHero/TitleBlogHero.module.css
+++ b/src/components/BlogHero/TitleBlogHero.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: var(--background-comp);
+  background: var(--background-colorful-component);
   box-shadow: 1px 6px 8px -9px inset;
   gap: 18px;
   text-align: center;
@@ -11,6 +11,8 @@
     font-weight: 600;
     font-size: 31.25px;
     line-height: 123.6%;
+
+    color: var(--black-to-white);
     @media (min-width: 768px) {
       font-weight: 700;
       font-size: 48px;
@@ -21,5 +23,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150.6%;
+
+    color: var(--black-to-white);
   }
 }
