--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -5,6 +5,7 @@
   gap: 50px;
   padding: 50px 16px 50px 16px;
   justify-content: center;
+  background-color: var(--background-color-white);
   @media (min-width: 768px) {
     flex-direction: row;
     gap: 24px;
