--- a/src/pages/Blog/Components/BlogArticle/BlogArticle.module.css
+++ b/src/pages/Blog/Components/BlogArticle/BlogArticle.module.css
@@ -16,7 +16,7 @@
 
 .article-container {
   padding: 30px 18px;
-  background: var(--white);
+  background: var(--our-services-blocks);
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   @media (min-width: 768px) {
@@ -31,6 +31,7 @@
     font-size: 25px;
     line-height: 123.6%;
     margin-bottom: 30px;
+    color: var(--black-to-white);
     @media (min-width: 768px) {
       font-size: 20px;
       margin-bottom: 18px;
@@ -50,10 +51,14 @@
   height: 60px;
   padding-left: 18px;
   padding-right: 18px;
+  background-color: var(--our-services-blocks);
   input {
     all: unset;
     width: 100%;
     height: 24px;
+    &::placeholder {
+      color: var(--paragraph);
+    }
   }
   input[type='submit'] {
     background: url(/src/assets/icons/search.svg) no-repeat center left;
@@ -79,7 +84,7 @@
 .article-block {
   display: flex;
   gap: 17px;
-  align-items: flex-start;
+  align-items: center;
   img {
     width: 40px;
     height: 40px;
@@ -93,7 +98,7 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 123.6%;
-    color: var(--h2-color);
+    color: var(--black-to-white);
     text-align: left;
     word-break: break-all;
     @media (min-width: 768px) {
@@ -150,10 +155,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid var(--p-color);
-
+  border: 1px solid var(--paragraph);
   width: 30px;
   height: 30px;
+  color: var(--paragraph);
   @media (min-width: 768px) {
     width: 25px;
     height: 25px;
@@ -170,8 +175,8 @@
   gap: 24px;
   li {
     padding: 4px 12px;
-    color: var(--p-color);
-    background-color: var(--background-comp);
+    color: var(--paragraph-permanent);
+    background-color: var(--blog-article-li);
     font-weight: 400;
     font-size: 16px;
     line-height: 150.6%;
