--- a/src/pages/Main/Components/AboutUsHome/AboutUsHome.module.css
+++ b/src/pages/Main/Components/AboutUsHome/AboutUsHome.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  max-width: 1170px;
+  margin: 0 auto;
   img {
     max-width: 100%;
     margin-bottom: 50px;
