--- a/src/pages/Main/Components/Form/Form.module.css
+++ b/src/pages/Main/Components/Form/Form.module.css
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1170px;
+  margin: 0 auto;
+
   @media (min-width: 768px) {
     flex-direction: row;
-    width: 100%;
+
     align-items: flex-end;
   }
   @media (max-width: 924px) {
