Тема меняется после второго клика, если перезагрузить страницу

--- a/src/components/Map/MapComponent.module.css
+++ b/src/components/Map/MapComponent.module.css
@@ -5,6 +5,8 @@
   height: 250px;
   /* overflow-x: hidden;
   overflow-y: hidden; */
+
+  transition: 0s;
   @media (min-width: 768px) {
     margin-top: 60px;
     margin-bottom: 120px;
