--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,9 @@
   display: flex;
   justify-content: space-between;
   padding: 13px 17px;
-  position: relative;
+  z-index: 4;
+  position: fixed;
+  width: 100%;
   .button-burger {
     justify-content: flex-end;
   }
@@ -51,6 +53,9 @@
   align-items: center;
   padding: 27px 40px;
   background-color: var(--header-background-white);
+  position: fixed;
+  width: 100%;
+  z-index: 4;
   nav {
     ul {
       display: flex;
