--- a/src/pages/Main/Components/Hero/Hero.module.css
+++ b/src/pages/Main/Components/Hero/Hero.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 50px;
   img {
     max-width: 100%;
 
@@ -11,6 +12,7 @@
     @media (min-width: 1360px) {
       min-width: 639px;
       margin-left: 39px;
+      margin-top: 80px;
     }
   }
   p {
